tests/fail/unexpected_semicolon.llcl
/*
error: unexpected separator: ';'
9  |fn main(): Int8 {
10 |    ;
        ^
11 |}
*/

fn main(): Int8 {
	;
}